# soft-ue-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
soft_ue_cli/: __init__.py  __main__.py  client.py  errors.py  github.py  mcp_schema.py  mcp_server.py  startup_recovery.py  streak.py  testimonial.py
soft_ue_cli/plugin_data/SoftUEBridge/: SoftUEBridge.uplugin
soft_ue_cli/plugin_data/SoftUEBridge/Source/SoftUEBridge/: SoftUEBridge.Build.cs
soft_ue_cli/plugin_data/SoftUEBridge/Source/SoftUEBridge/Private/: SoftUEBridgeModule.cpp
soft_ue_cli/plugin_data/SoftUEBridge/Source/SoftUEBridge/Private/Server/: BridgeServer.cpp
soft_ue_cli/plugin_data/SoftUEBridge/Source/SoftUEBridge/Private/Subsystem/: SoftUEBridgeSubsystem.cpp
soft_ue_cli/plugin_data/SoftUEBridge/Source/SoftUEBridge/Private/Tools/: BridgeToolBase.cpp  BridgeToolRegistry.cpp  CallFunctionTool.cpp  CaptureViewportTool.cpp  ConsoleVarTool.cpp  GetConfigValueTool.cpp  GetConfigValueTool.h  GetLogsTool.cpp  GetLogsTool.h  GetPropertyTool.cpp  QueryLevelTool.cpp  ReloadBridgeModuleTool.cpp  ReloadBridgeModuleTool.h  SetConfigValueTool.cpp  SetPropertyTool.cpp  SpawnActorTool.cpp  ValidateConfigKeyTool.cpp
soft_ue_cli/plugin_data/SoftUEBridge/Source/SoftUEBridge/Public/: SoftUEBridgeModule.h
soft_ue_cli/plugin_data/SoftUEBridge/Source/SoftUEBridge/Public/Subsystem/: SoftUEBridgeSubsystem.h
soft_ue_cli/plugin_data/SoftUEBridge/Source/SoftUEBridge/Public/Tools/: BridgeToolBase.h  BridgeToolRegistry.h
soft_ue_cli/plugin_data/SoftUEBridge/Source/SoftUEBridgeEditor/: SoftUEBridgeEditor.Build.cs
soft_ue_cli/plugin_data/SoftUEBridge/Source/SoftUEBridgeEditor/Private/: SoftUEBridgeEditorModule.cpp
soft_ue_cli/plugin_data/SoftUEBridge/Source/SoftUEBridgeEditor/Private/Tools/Analysis/: ValidateClassPathTool.cpp
soft_ue_cli/plugin_data/SoftUEBridge/Source/SoftUEBridgeEditor/Private/Tools/Asset/: AssetIntrospectionUtils.cpp  EditCustomizableObjectGraphTool.cpp  InspectCustomizableObjectGraphTool.cpp  InspectMutableDiagnosticsTool.cpp  InspectMutableParametersTool.cpp  MutableIntrospectionUtils.cpp  MutableIntrospectionUtils.h  OpenAssetTool.cpp  QueryAssetTool.cpp  QueryEnumTool.cpp  QueryStructTool.cpp  ReleaseAssetLockTool.cpp
soft_ue_cli/plugin_data/SoftUEBridge/Source/SoftUEBridgeEditor/Private/Tools/Editor/: CaptureScreenshotTool.cpp
soft_ue_cli/plugin_data/SoftUEBridge/Source/SoftUEBridgeEditor/Private/Tools/Material/: CompileMaterialTool.cpp  QueryMaterialTool.cpp
soft_ue_cli/plugin_data/SoftUEBridge/Source/SoftUEBridgeEditor/Private/Tools/PIE/: ExecConsoleCommandTool.cpp  InspectPawnPossessionTool.cpp  PieSessionTool.cpp
soft_ue_cli/plugin_data/SoftUEBridge/Source/SoftUEBridgeEditor/Private/Tools/Performance/: InsightsCaptureTool.cpp
soft_ue_cli/plugin_data/SoftUEBridge/Source/SoftUEBridgeEditor/Private/Tools/Project/: ReloadGameplayTagsTool.cpp  RequestGameplayTagTool.cpp
soft_ue_cli/plugin_data/SoftUEBridge/Source/SoftUEBridgeEditor/Private/Tools/Scripting/: RunPythonScriptTool.cpp
soft_ue_cli/skills/: __init__.py  author-anim-state-test.md  author-bp-parity-test.md  author-invariant-test.md  author-regression-test.md  author-test.md  blueprint-to-cpp.md  level-from-image.md  test-tools.md
soft_ue_cli/uasset/: __init__.py  external_actor.py  package.py  properties.py
tests/: test_client.py  test_client_errors.py  test_discovery.py  test_errors.py  test_github.py  test_github_discussion.py  test_main.py  test_mcp_nudge.py  test_mcp_schema.py  test_mcp_server.py  test_plugin_descriptor.py  test_rewind.py  test_skills.py  test_startup_recovery.py  test_streak.py  test_testimonial.py  test_uasset.py
(+36 files in other folders)
